--- a/html/index.html
+++ b/html/index.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    
+    <div class="head">
+        <div class="lefh">
+        </div>
+        <div class="riga">
+            <a href="#">Features</a>
+            <a href="#">Pricing</a>
+            <a href="#">Solution</a>
+            <a href="#">Customers</a>
+            <a href="#">Partner with us</a>
+            <a href="#">Resources</a>
+            <BUtton>Sign up Now</BUtton>
+        </div>
+    </div><br><br>
+         <hr><hr>
+            <div class="cont1">
+            <h1>
+                Improve Sales.Lasting Relationships.<br>Faster Growth.
+            </h1><br>
+            <p>15-days free trial.No credit card required.</p><br>
+            <div class="btn1">
+                <button id="buttonlef">SIGN UP FOR FREE</button><BUtton id="buttonrig">SEE PLANS AND PRICING</BUtton>
+            </div>
+    </div>
+    <div class="cont2">
+        <h1>1</h1>
+        <h2>Requirement Gathering</h2> 
+        <p></p>   
+    </div>
 </body>
 </html>
