--- a/html/index.html
+++ b/html/index.html
@@ -31,9 +31,28 @@
             </div>
     </div>
     <div class="cont2">
-        <h1>1</h1>
+        <img src="https://t3.ftcdn.net/jpg/06/33/53/56/360_F_633535688_PKzyzbxV7JvTydVlTgODGq7Q9PsbILNX.webp" alt="">
+        <h1><span>1</span></h1>
         <h2>Requirement Gathering</h2> 
-        <p></p>   
+        <p>The collecting of requirements is an essential first step in the software development process. It entails methodically gathering and examining data from project teams, stakeholders, and end users to comprehend their requirements and expectations. The scope, goals, and restrictions of the project are defined as a result of this process, which lays the groundwork for a successful project execution.</p>   
+    </div>
+    <div class="cont3">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ2SezIClRaj8TrO5HA4_UU1msNU2gN7fzjtbQymPpHHCY42BIT" alt="">
+        <h1><span>2</span></h1>
+        <h2>Protoype</h2> 
+        <p>A product, system, or software application prototype is an early version or mockup of the actual thing. It acts as a concrete illustration of the design concept, enabling stakeholders to picture and engage with the features and functionalities of the product. Before development, prototyping aids in spotting potential problems, gathering input, and improving the finished product.</p>   
+    </div>
+    <div class="cont2">
+        <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTic0sw-TCkfJ_l4sxhgMC0hS7WefiPqbSab2Wz5J-gX_NgdpRc" alt="">
+        <h1><span>3</span></h1>
+        <h2>Deployment</h2> 
+        <p>The finished programme or system is released and made accessible to end users during the deployment step of the software development lifecycle. On production servers or devices, the software must be installed, set up, and activated. A smooth transition from development to actual operation is ensured by proper deployment. To guarantee the best performance and reliability, testing, monitoring, and maintenance are essential components of this phase.</p>   
+    </div>
+    <div class="cont3">
+        <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRXThL87uRdVr_klgKrzvbQxx5_aQddQQ8GTXNl18lPD8Tn21kb" alt="">
+        <h1><span>4</span></h1>
+        <h2>Support & Maintainance</h2> 
+        <p>Software deployment is followed by a continuous process called support & maintenance. It entails helping end users, resolving problems, and taking care of bugs or upgrades. The system is kept up to date with changing requirements and technical improvements through routine maintenance operations like software upgrades, security patches, and performance enhancements. A long-lasting and dependable software solution is ensured by effective support and maintenance.</p>   
     </div>
 </body>
 </html>
