--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,8 @@
 <body>
     <div class="head">
         <div class="lefh">
-            <img src="" alt="">
+            <!-- https://t1.gstatic.com/images?q=tbn:ANd9GcRjydeSpCUJYOFNGOHy3Dat-ieB4JKnLzv6thxqLkwR-L4DHrQg -->
+            <a href="#"><img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcQJCcnxNS444FF4WrHQ2IBj1ZygCPo0wrPa2Hcq0cKCQGN5z4BO" alt=""></a>
         </div>
         <div class="riga">
             <a href="#">Features</a>
@@ -20,8 +21,9 @@
             <a href="#">Resources</a>
             <BUtton>Sign up Now</BUtton>
         </div>
-    </div><br><br>
-         <hr><hr>
+    </div>
+    <br><br><hr><hr>
+         <!-- <hr><hr> -->
             <div class="cont1">
             <h1>
                 Improve Sales.Lasting Relationships.<br>Faster Growth.
