--- a/html/index.html
+++ b/html/index.html
@@ -59,7 +59,7 @@
     </div>
     <div class="cont4">
         <h4>TAILERED FOR YOU</h4>
-        <H2>An accounting solution for</H2>
+        <h2>An accounting solution for</h2>
         <h1>every need and every bussiness</h1>
         <div class="container1"><img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcT3JFWMt8l5YgTTAsJDq7TuBk8YpYrJVz88bsMHx9f6eheGP1Zg" alt="">
                 </div>
