--- a/html/index.html
+++ b/html/index.html
@@ -62,13 +62,13 @@
         <h2>An accounting solution for</h2>
         <h1>every need and every bussiness</h1>
         <div class="container1"><img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcT3JFWMt8l5YgTTAsJDq7TuBk8YpYrJVz88bsMHx9f6eheGP1Zg" alt="">
-                </div>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quas neque voluptatem rerum ex odio asperiores excepturi quasi autem voluptates!</p></div>
         <div class="container1"><img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQmDm77bdN-LhoCq1vDGDaR8FHH_ZTHqMJP3KGfEyHZW4TTfFWF" alt="">
-                </div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere quae voluptatibus vero voluptatem expedita numquam ad labore impedit incidunt qui.</p></div>
         <div class="container1"><img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTnTdKoC8QGaJsPSAo-b243ayPmxI24sNpRreF4C8noHH_0b2ni" alt="">
-                </div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere quae voluptatibus vero voluptatem expedita numquam ad labore impedit incidunt qui.</p></div>
         <div class="container1"><img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQN5BzYCYIZv2D8I_z-xUfiWRTyecAaBMGwsSfQgEhhdrkWtsJq" alt="">
-                </div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere quae voluptatibus vero voluptatem expedita numquam ad labore impedit incidunt qui.</p></div>
     </div>
 </body>
 </html>
