--- a/html/index.html
+++ b/html/index.html
@@ -70,5 +70,8 @@
         <div class="container1"><img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQN5BzYCYIZv2D8I_z-xUfiWRTyecAaBMGwsSfQgEhhdrkWtsJq" alt="">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere quae voluptatibus vero voluptatem expedita numquam ad labore impedit incidunt qui.</p></div>
     </div>
+    <div class="footer">
+        <p>&copy; All Right Reserved (not really)</p>
+    </div>
 </body>
 </html>
